--- a/styles.css
+++ b/styles.css
@@ -6,5 +6,16 @@
   font-style: normal;
   font-variation-settings:
     "wdth" 100;
-    
+}
+
+body {
+  
+}
+
+.container-fluid {
+  min-height: 100vh;
+}
+
+a {
+  color: black !important; 
 }
